k8s/05-dashboard-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: banking-dashboard
  namespace: banking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: banking-dashboard
  template:
    metadata:
      labels:
        app: banking-dashboard
    spec:
      containers:
      - name: dashboard
        image: habibamohamedmegahed/banking-dashboard:v1.0
        ports:
        - containerPort: 80

        # ✅ Health Checks
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10

        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 20

        # ✅ Resources (مهم جدًا مع مشكلة disk/memory)
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"

        # ✅ Restart behavior (optional تحسين)
        imagePullPolicy: IfNotPresent
